--- a/index.html
+++ b/index.html
@@ -335,14 +335,18 @@
             </div>
         </div>
         
-            <!-- Sobre mí -->
-            <div class="about-box">
-    <h2>👾 Sobre mí</h2>
-    <p>
-        Soy una programadora que disfruta de hacer paginas en HTML, jugar juegos, hacer musica y escuchar musica. Hago musica para juegos como FNF o VGM.
-        Me encantan los gatos, series, animes y me encanta pasar tiempo con gente. Soy amigable! Asi que si quieres hablame.
-    </p>
-</div>
+        <!-- About section -->
+        <div class="about-section" id="about">
+            <div class="about-title">
+                <span class="icon">👾</span>
+                <span>Sobre mí</span>
+            </div>
+            <div class="about-content">
+                Soy una programadora que disfruta de hacer paginas en HTML, jugar juegos, hacer musica y escuchar musica. Hago musica para juegos como FNF o VGM.
+                Me encantan los gatos, series, animes y me encanta pasar tiempo con gente. Soy amigable! Asi que si quieres hablame.
+            </div>
+        </div>
+
 
         </div>
         
