--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         
         body {
+            <a href="index_en.html" style="position: absolute; top: 20px; right: 20px;">English</a>
             background-color: #ff9acf;
             color: #fff;
             line-height: 1.6;
