--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background-image: url('https://images.unsplash.com/photo-1516410290616-fb59b7994a51?q=80&w=1686&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background-image: url('https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZzdnMTA0eXBoMnM4MWFldXI4bm15YW5jbzZ5cXhlenVkanM4dnEydCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xT8qBfjJhOmNPTVWU0/giphy.gif');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
