--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
     <div class="container">
         <div class="profile-section fade-in" id="home">
             <img src="https://i.ibb.co/1Gtd5KRj/708632f50500d51d92c197180e2f2f03.jpg" alt="Profile" class="profile-pic float-animation">
-            <h2 class="greeting">¡Hola! Soy</h2>
+            <h2 class="greeting">¡Hi! I am</h2>
             <h1 class="name">/Mariah/</h1>
-            <div class="title">✨ Desarrolladora ✨</div>
+            <div class="title">✨ Developer ✨</div>
         </div>
 
         <div class="info-cards fade-in">
@@ -338,18 +338,18 @@
         <div class="about-section fade-in" id="about">
             <div class="about-title">
                 <span class="icon">👾</span>
-                <span>Sobre mí</span>
+                <span>About Me</span>
             </div>
             <div class="about-content">
-                Soy una programadora que disfruta de hacer paginas en HTML, jugar juegos, hacer musica y escuchar musica. Hago musica para juegos como FNF o VGM.
-                Me encantan los gatos, series, animes y me encanta pasar tiempo con gente. Soy amigable! Asi que si quieres hablame.
+                I am a programmer who enjoys making HTML pages, playing games, making music and listening to music. I make music for games like FNF or VGM.
+                I love cats, series, anime and I love spending time with people. I'm friendly! So if you want to talk to me.
             </div>
         </div>
 
         <div class="projects-section fade-in" id="projects">
             <div class="about-section">
                 <div class="about-title">
-                    🚧 Lugar en construcción 🚧
+                    🚧 Under Construction !! 🚧
                 </div>
                 <div class="about-content">
                     Estoy trabajando en nuevos proyectos, ¡vuelve pronto para ver más!
