--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                     🚧 Under Construction !! 🚧
                 </div>
                 <div class="about-content">
-                    Estoy trabajando en nuevos proyectos, ¡vuelve pronto para ver más!
+                    I'm working on new projects, check back soon to see more!
                 </div>
             </div>
         </div>
