--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
         .nav a:hover {
             color: #ffffff;
         }
+        
+        /* Estilo para la imagen del catálogo */
+        .catalog-img {
+            height: 24px;
+            width: auto;
+            margin-right: 5px;
+            vertical-align: middle;
+        }
 
         .profile-section {
             text-align: center;
@@ -311,9 +319,9 @@
 </head>
 <body>
     <div class="nav fade-in">
-        <a href="#home">/home/</a>
-        <a href="#about">/about/</a>
-        <a href="#projects">/projects/</a>
+        <a href="#home"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/home/</a>
+        <a href="#about"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/about/</a>
+        <a href="#projects"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/projects/</a>
     </div>
 
     <div class="container">
