--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background-image: url('https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZzdnMTA0eXBoMnM4MWFldXI4bm15YW5jbzZ5cXhlenVkanM4dnEydCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xT8qBfjJhOmNPTVWU0/giphy.gif');
+            <a href="https://es.vecteezy.com/video/2018133-desenfoque-estrellas-coloridas-moviendose-en-el-sentido-de-las-agujas-del-reloj">desenfoque de estrellas de colores moviéndose en el sentido de las agujas del reloj Vídeos de stocko por Vecteezy</a>
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
