--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         body {
-            background-color: #ff9acf;
+            background-color: #353535;
             color: #fff;
             line-height: 1.6;
             display: flex;
