--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: 'RetroPixel';
-            src: url('https://cdnjs.cloudflare.com/ajax/libs/VT323/1.0/VT323-Regular.ttf') format('truetype');
+            src: url('https://cdnjs.cloudflare.com/ajax/libs/pixel-borders/1.1.1/pixel-borders.min.css') format('truetype');
         }
 
         * {
