--- a/index.html
+++ b/index.html
@@ -348,19 +348,16 @@
             }
         }
     </style>
-</head>
-<body>
     
     <div class="moving-symbols-container">
         
     </div>
 
     <div class="nav fade-in">
-        <a href="#home"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/home/</a>
-        <a href="#about"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/about/</a>
-        <a href="#projects"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/projects/</a>
+        <a href="#home"><img src="assets/images/catlogo.png">/home/</a>
+        <a href="#about"><img src="assets/images/catlogo.png" class="catalog-img">/about/</a>
+        <a href="#projects"><img src="assets/images/catlogo.png" class="catalog-img">/projects/</a>
     </div>
-
     <div class="container">
         <div class="profile-section fade-in" id="home">
             <img src="https://i.ibb.co/1Gtd5KRj/708632f50500d51d92c197180e2f2f03.jpg" alt="Profile" class="profile-pic float-animation">
