--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             </div>
         </div>
 
-        <!-- Music Player Section -->
+        <!-- reproductor de musica -->
         <div class="music-section fade-in" id="music">
             <div class="about-title">
                 <span class="icon">🎵</span>
@@ -442,7 +442,7 @@
                 <div class="music-controls">
                     <button id="playBtn" class="music-btn">▶️ Play</button>
                     <button id="pauseBtn" class="music-btn">⏸️ Pause</button>
-                    <div class="song-info">Now Playing: iloveyou.mp3</div>
+                    <div class="song-info">Now Playing: iloveyou - hello john doe</div>
                 </div>
             </div>
         </div>
@@ -495,7 +495,7 @@
 
         window.addEventListener('load', createStars);
 
-        // Music Player Controls
+        // aca para controlar eso
         document.addEventListener('DOMContentLoaded', () => {
             const audioPlayer = document.getElementById('audioPlayer');
             const playBtn = document.getElementById('playBtn');
