--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             z-index: -1;
         }
 
-        /* Estilos para el reproductor de música */
+        /* reproductor*/
         .music-section {
             background-color: rgba(34, 34, 34, 0.7);
             border-radius: 15px;
@@ -427,7 +427,7 @@
 
     <div class="container">
         <div class="profile-section fade-in" id="home">
-            <img src="https://i.ibb.co/1Gtd5KRj/708632f50500d51d92c197180e2f2f03.jpg" alt="Profile" class="profile-pic float-animation">
+            <img src="https://i.ibb.co/QjzfPW3n/R.png" alt="Profile" class="profile-pic float-animation">
             <h2 class="greeting">¡Hi! I am</h2>
             <h1 class="name">/Mariah/</h1>
             <div class="title">✨ Developer ✨</div>
