--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         body {
-            background-color: #ff9acf;
+            background-color: #000000;
             color: #fff;
             line-height: 1.6;
             display: flex;
@@ -27,7 +27,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background-image: url('https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZzdnMTA0eXBoMnM4MWFldXI4bm15YW5jbzZ5cXhlenVkanM4dnEydCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/xT8qBfjJhOmNPTVWU0/giphy.gif');
+            background-image: url('');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
