--- a/index.html
+++ b/index.html
@@ -664,8 +664,12 @@
                 {
                     title: "GHOSTS",
                     path: "musica/ghosts.mp3"
+                },
+                {    
+
+                    title: "FlyOutWest",
+                    path: "musica/FlyOutWest.mp3"
                 }
-                
             ];
             
             // estado del reproductor
