--- a/index.html
+++ b/index.html
@@ -270,6 +270,40 @@
             z-index: -1;
         }
 
+        .credits-section {
+    background-color: rgba(34, 34, 34, 0.7);
+    border-radius: 15px;
+    padding: 20px;
+    margin: 20px 0;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.credits-title {
+    font-size: 1.8rem;
+    color: #ffffff;
+    margin-bottom: 15px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    padding-bottom: 10px;
+}
+
+.credit-item {
+    font-size: 1.1rem;
+    color: #e0e0e0;
+    line-height: 1.6;
+    padding-left: 15px;
+    position: relative;
+}
+
+.credit-item::before {
+    content: "♪";
+    position: absolute;
+    left: 0;
+    color: #a56af5;
+}
+
+
         @media (max-width: 768px) {
             .greeting {
                 font-size: 2rem;
