--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
         <a href="#home"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/home/</a>
         <a href="#about"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/about/</a>
         <a href="#projects"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/projects/</a>
+        <a href="#credits"><img src="assets/images/catlogo.png" alt="Catálogo" class="catalog-img">/credits/</a>
     </div>
 
     <div class="container">
